[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.63"
